// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> matches snapshot with default props 1`] = `
<div
  className="Flex rowGap4 columnGap0 xsDirectionRow xsItemsCenter"
>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        aria-current="page"
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn xsItemsCenter"
        >
          <div
            className="box paddingX2 paddingY2 relative rounding2 userSelectNone"
            style={
              Object {
                "backgroundColor": "var(--color-background-tabs-default-base)",
              }
            }
          >
            <div
              className="Flex rowGap2 columnGap0 justifyCenter xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="default alignStart noWrap Text fontSize300 fontWeightSemiBold"
                >
                  News
                </div>
              </div>
            </div>
            <div
              className="absolute box"
              style={
                Object {
                  "bottom": -3,
                  "width": "calc(100% - 16px)",
                }
              }
            >
              <div
                className="box selected"
                style={
                  Object {
                    "borderRadius": 1.5,
                    "height": 3,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn xsItemsCenter"
        >
          <div
            className="box paddingX2 paddingY2 relative rounding2 userSelectNone"
            style={
              Object {
                "backgroundColor": "var(--color-background-tabs-default-base)",
              }
            }
          >
            <div
              className="Flex rowGap2 columnGap0 justifyCenter xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="default alignStart noWrap Text fontSize300 fontWeightSemiBold"
                >
                  You
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with dot indicators 1`] = `
<div
  className="Flex rowGap4 columnGap0 xsDirectionRow xsItemsCenter"
>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        aria-current="page"
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn xsItemsCenter"
        >
          <div
            className="box paddingX2 paddingY2 relative rounding2 userSelectNone"
            style={
              Object {
                "backgroundColor": "var(--color-background-tabs-default-base)",
              }
            }
          >
            <div
              className="Flex rowGap2 columnGap0 justifyCenter xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="default alignStart noWrap Text fontSize300 fontWeightSemiBold"
                >
                  News
                </div>
              </div>
              <div
                className="FlexItem"
              >
                <div
                  className="box brand circle"
                  style={
                    Object {
                      "height": 6,
                      "marginTop": "1px",
                      "width": 6,
                    }
                  }
                />
              </div>
            </div>
            <div
              className="absolute box"
              style={
                Object {
                  "bottom": -3,
                  "width": "calc(100% - 16px)",
                }
              }
            >
              <div
                className="box selected"
                style={
                  Object {
                    "borderRadius": 1.5,
                    "height": 3,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn xsItemsCenter"
        >
          <div
            className="box paddingX2 paddingY2 relative rounding2 userSelectNone"
            style={
              Object {
                "backgroundColor": "var(--color-background-tabs-default-base)",
              }
            }
          >
            <div
              className="Flex rowGap2 columnGap0 justifyCenter xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="default alignStart noWrap Text fontSize300 fontWeightSemiBold"
                >
                  You
                </div>
              </div>
              <div
                className="FlexItem"
              >
                <div
                  className="box brand circle"
                  style={
                    Object {
                      "height": 6,
                      "marginTop": "1px",
                      "width": 6,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with wrap 1`] = `
<div
  className="Flex rowGap4 columnGap0 flexWrap xsDirectionRow xsItemsCenter"
>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        aria-current="page"
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn xsItemsCenter"
        >
          <div
            className="box paddingX2 paddingY2 relative rounding2 userSelectNone"
            style={
              Object {
                "backgroundColor": "var(--color-background-tabs-default-base)",
              }
            }
          >
            <div
              className="Flex rowGap2 columnGap0 justifyCenter xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="default alignStart noWrap Text fontSize300 fontWeightSemiBold"
                >
                  News
                </div>
              </div>
            </div>
            <div
              className="absolute box"
              style={
                Object {
                  "bottom": -3,
                  "width": "calc(100% - 16px)",
                }
              }
            >
              <div
                className="box selected"
                style={
                  Object {
                    "borderRadius": 1.5,
                    "height": 3,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionColumn xsItemsCenter"
        >
          <div
            className="box paddingX2 paddingY2 relative rounding2 userSelectNone"
            style={
              Object {
                "backgroundColor": "var(--color-background-tabs-default-base)",
              }
            }
          >
            <div
              className="Flex rowGap2 columnGap0 justifyCenter xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="default alignStart noWrap Text fontSize300 fontWeightSemiBold"
                >
                  You
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
